Fixed tech stack ui overflow issue

--- a/src/tailwind.css
+++ b/src/tailwind.css
@@ -7,8 +7,11 @@
       "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
     --font-mono: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono",
       "Courier New", monospace;
+    --color-red-50: oklch(97.1% 0.013 17.38);
     --color-red-500: oklch(63.7% 0.237 25.331);
+    --color-yellow-500: oklch(79.5% 0.184 86.047);
     --color-green-500: oklch(72.3% 0.219 149.579);
+    --color-blue-500: oklch(62.3% 0.214 259.815);
     --spacing: 0.25rem;
     --text-xs: 0.75rem;
     --text-xs--line-height: calc(1 / 0.75);
@@ -188,6 +191,9 @@
   }
 }
 @layer utilities {
+  .invisible {
+    visibility: hidden;
+  }
   .absolute {
     position: absolute;
   }
@@ -205,6 +211,9 @@
   }
   .top-\[7px\] {
     top: 7px;
+  }
+  .bottom-\[40px\] {
+    bottom: 40px;
   }
   .left-0 {
     left: calc(var(--spacing) * 0);
@@ -308,23 +317,83 @@
   .w-\[6rem\] {
     width: 6rem;
   }
+  .w-\[10px\] {
+    width: 10px;
+  }
+  .w-\[20\%\] {
+    width: 20%;
+  }
   .w-\[22rem\] {
     width: 22rem;
   }
   .w-\[26rem\] {
     width: 26rem;
   }
+  .w-\[50px\] {
+    width: 50px;
+  }
   .w-\[70\%\] {
     width: 70%;
+  }
+  .w-\[100\%-2rem\] {
+    width: 100%-2rem;
+  }
+  .w-\[100\%-\] {
+    width: 100%-;
   }
   .w-\[100\%\] {
     width: 100%;
   }
+  .w-\[100px\] {
+    width: 100px;
+  }
+  .w-\[200px\] {
+    width: 200px;
+  }
   .w-\[calc\(20\%-2rem\)\] {
     width: calc(20% - 2rem);
   }
+  .w-\[calc\(100\%-\)\] {
+    width: calc(100% - );
+  }
+  .w-\[calc\(100\%-2\)\] {
+    width: calc(100% - 2);
+  }
+  .w-\[calc\(100\%-2\.5rem\)\] {
+    width: calc(100% - 2.5rem);
+  }
   .w-\[calc\(100\%-2rem\)\] {
     width: calc(100% - 2rem);
+  }
+  .w-\[calc\(100\%-3rem\)\] {
+    width: calc(100% - 3rem);
+  }
+  .w-\[calc\(100\%-4rem\)\] {
+    width: calc(100% - 4rem);
+  }
+  .w-\[calc\(100\%-5rem\)\] {
+    width: calc(100% - 5rem);
+  }
+  .w-\[calc\(100\%-10rem\)\] {
+    width: calc(100% - 10rem);
+  }
+  .w-\[calc\(100\%-20\)\] {
+    width: calc(100% - 20);
+  }
+  .w-\[calc\(100\%-20rem\)\] {
+    width: calc(100% - 20rem);
+  }
+  .w-\[calc\(100\%-22rem\)\] {
+    width: calc(100% - 22rem);
+  }
+  .w-\[calc\(100\%-25rem\)\] {
+    width: calc(100% - 25rem);
+  }
+  .w-\[calc\(100\%-26rem\)\] {
+    width: calc(100% - 26rem);
+  }
+  .w-\[calc\] {
+    width: calc;
   }
   .w-auto {
     width: auto;
@@ -335,11 +404,44 @@
   .w-dvw {
     width: 100dvw;
   }
+  .w-fit {
+    width: fit-content;
+  }
   .w-full {
     width: 100%;
   }
   .resize {
     resize: both;
+  }
+  .columns-1 {
+    columns: 1;
+  }
+  .columns-2 {
+    columns: 2;
+  }
+  .grid-cols-1 {
+    grid-template-columns: repeat(1, minmax(0, 1fr));
+  }
+  .grid-cols-\[1\] {
+    grid-template-columns: 1;
+  }
+  .grid-cols-\[1fr_3fr\] {
+    grid-template-columns: 1fr 3fr;
+  }
+  .grid-cols-\[2fr_1fr\] {
+    grid-template-columns: 2fr 1fr;
+  }
+  .grid-cols-\[2fr_\] {
+    grid-template-columns: 2fr ;
+  }
+  .grid-cols-\[4fr\,_1fr\] {
+    grid-template-columns: 4fr, 1fr;
+  }
+  .grid-cols-\[4fr_1fr\] {
+    grid-template-columns: 4fr 1fr;
+  }
+  .grid-cols-\[auto_auto\] {
+    grid-template-columns: auto auto;
   }
   .flex-col {
     flex-direction: column;
@@ -383,6 +485,9 @@
   .overflow-hidden {
     overflow: hidden;
   }
+  .overflow-scroll {
+    overflow: scroll;
+  }
   .overflow-x-hidden {
     overflow-x: hidden;
   }
@@ -422,6 +527,9 @@
   .bg-bgColor {
     background-color: var(--color-bgColor);
   }
+  .bg-blue-500 {
+    background-color: var(--color-blue-500);
+  }
   .bg-componentsColor {
     background-color: var(--color-componentsColor);
   }
@@ -431,11 +539,17 @@
   .bg-green-500 {
     background-color: var(--color-green-500);
   }
+  .bg-red-50 {
+    background-color: var(--color-red-50);
+  }
   .bg-red-500 {
     background-color: var(--color-red-500);
   }
   .bg-sideBarCover {
     background-color: var(--color-sideBarCover);
+  }
+  .bg-yellow-500 {
+    background-color: var(--color-yellow-500);
   }
   .stroke-textColor {
     stroke: var(--color-textColor);
@@ -543,6 +657,12 @@
   .opacity-0 {
     opacity: 0%;
   }
+  .opacity-0\.5 {
+    opacity: 0.5%;
+  }
+  .opacity-50 {
+    opacity: 50%;
+  }
   .opacity-60 {
     opacity: 60%;
   }
@@ -594,6 +714,38 @@
       width: 26rem;
     }
   }
+  .\[\&_svg\]\:scale-100 {
+    & svg {
+      --tw-scale-x: 100%;
+      --tw-scale-y: 100%;
+      --tw-scale-z: 100%;
+      scale: var(--tw-scale-x) var(--tw-scale-y);
+    }
+  }
+  .\[\&_svg\]\:scale-175 {
+    & svg {
+      --tw-scale-x: 175%;
+      --tw-scale-y: 175%;
+      --tw-scale-z: 175%;
+      scale: var(--tw-scale-x) var(--tw-scale-y);
+    }
+  }
+  .\[\&_svg\]\:scale-200 {
+    & svg {
+      --tw-scale-x: 200%;
+      --tw-scale-y: 200%;
+      --tw-scale-z: 200%;
+      scale: var(--tw-scale-x) var(--tw-scale-y);
+    }
+  }
+  .\[\&_svg\]\:scale-300 {
+    & svg {
+      --tw-scale-x: 300%;
+      --tw-scale-y: 300%;
+      --tw-scale-z: 300%;
+      scale: var(--tw-scale-x) var(--tw-scale-y);
+    }
+  }
   .\[\&\>li\>a\]\:flex {
     &>li>a {
       display: flex;
@@ -635,9 +787,30 @@
       display: flex;
     }
   }
+  .\[\&\>span\]\:scale-2 {
+    &>span {
+      --tw-scale-x: 2%;
+      --tw-scale-y: 2%;
+      --tw-scale-z: 2%;
+      scale: var(--tw-scale-x) var(--tw-scale-y);
+    }
+  }
+  .\[\&\>span\]\:scale-100 {
+    &>span {
+      --tw-scale-x: 100%;
+      --tw-scale-y: 100%;
+      --tw-scale-z: 100%;
+      scale: var(--tw-scale-x) var(--tw-scale-y);
+    }
+  }
   .\[\&\>span\]\:flex-row {
     &>span {
       flex-direction: row;
+    }
+  }
+  .\[\&\>span\]\:gap-\[1rem\] {
+    &>span {
+      gap: 1rem;
     }
   }
   .\[\&\>span\]\:gap-\[2\.5rem\] {
@@ -648,6 +821,16 @@
   .\[\&\>span\]\:gap-\[2rem\] {
     &>span {
       gap: 2rem;
+    }
+  }
+  .\[\&\>span\]\:gap-\[3rem\] {
+    &>span {
+      gap: 3rem;
+    }
+  }
+  .\[\&\>span\]\:gap-\[5\] {
+    &>span {
+      gap: 5;
     }
   }
   .\[\&\>span\]\:gap-\[5rem\] {
@@ -738,6 +921,21 @@
   syntax: "*";
   inherits: false;
 }
+@property --tw-scale-x {
+  syntax: "*";
+  inherits: false;
+  initial-value: 1;
+}
+@property --tw-scale-y {
+  syntax: "*";
+  inherits: false;
+  initial-value: 1;
+}
+@property --tw-scale-z {
+  syntax: "*";
+  inherits: false;
+  initial-value: 1;
+}
 @layer properties {
   @supports ((-webkit-hyphens: none) and (not (margin-trim: inline))) or ((-moz-orient: inline) and (not (color:rgb(from red r g b)))) {
     *, ::before, ::after, ::backdrop {
@@ -759,6 +957,9 @@
       --tw-ring-offset-shadow: 0 0 #0000;
       --tw-duration: initial;
       --tw-ease: initial;
+      --tw-scale-x: 1;
+      --tw-scale-y: 1;
+      --tw-scale-z: 1;
     }
   }
 }
